<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/nutriscan_logo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_nutriscan_logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/nutriscan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spacelight"
            android:text="@string/title_app_name"
            android:textColor="@color/orange_primary"
            android:textSize="52sp"
            android:textStyle="bold"
            android:letterSpacing="0.02" />

        <TextView
            android:id="@+id/nutriscan_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/spacelight"
            android:text="@string/main_tagline"
            android:textColor="#555555"
            android:textSize="16sp"
            android:letterSpacing="0.01" />
    </LinearLayout>

    <ImageView
        android:id="@+id/bottom_graphics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottom_graphics"
        android:contentDescription="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>